--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -27,4 +27,11 @@ pipeline {
             }
         }
     }
+    post {
+    failure {
+        mail to: '1154693969@qq.com',
+             subject: "Failed Pipeline: ${currentBuild.fullDisplayName}",
+             body: "Something is wrong with ${env.BUILD_URL}"
+    }
+}
 }
